// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`reddit video 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "Harry_the_space_man",
      "likes": 67189,
      "platform": "reddit",
      "title": "The Chinese Tianlong-3 Rocket Accidentally Launched During A Engine Test",
    },
    "urls": [
      {
        "filename": "reddit-1drzauu.mp4",
        "type": "video",
        "url": "https://v.redd.it/z8nfr7ek1p9d1/DASH_1080.mp4",
      },
    ],
  },
}
`;

exports[`reddit gallery 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "Wild-Department3737",
      "likes": 20118,
      "platform": "reddit",
      "title": "🐈‍⬛🥊🐈",
    },
    "urls": [
      {
        "filename": "reddit-7a8hge8cgs9d1.jpg",
        "type": "image",
        "url": "https://preview.redd.it/7a8hge8cgs9d1.jpg",
      },
      {
        "filename": "reddit-y42eje8cgs9d1.jpg",
        "type": "image",
        "url": "https://preview.redd.it/y42eje8cgs9d1.jpg",
      },
    ],
  },
}
`;

exports[`reddit single_image 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "kingpubcrisps",
      "likes": 884,
      "platform": "reddit",
      "title": "[Xperia 10 III w/ Sailfish w/ Arch] My mobile office.",
    },
    "urls": [
      {
        "filename": "reddit-12ruaq1.jpg",
        "type": "image",
        "url": "https://i.redd.it/3b59od9gkuua1.jpg",
      },
    ],
  },
}
`;

exports[`reddit post_with_thumbnail 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "[deleted]",
      "likes": 54,
      "platform": "reddit",
      "title": "Ningen Isu - Ringo No Namida (a metal song about an apple and related metaphors).",
    },
    "urls": [
      {
        "filename": "reddit-12spx82.jpg",
        "type": "image",
        "url": "https://www.youtube.com/watch",
      },
    ],
  },
}
`;

exports[`instagram video_reel 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "Referer": "https://www.instagram.com/",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36",
    },
    "meta": {
      "author": "uni_oficial",
      "comments": 2,
      "description": 
"#Top5 | Descubre las noticias más destacadas de la semana 📰

Una semana de reconocimientos, investigación, innovación y nuevos logros que siguen marcando nuestra comunidad UNI.

💬 ¿Qué noticia sumarías a nuestro Top 5?

#NoticiasUNI #ComunidadUNI #UNI"
,
      "likes": 289,
      "platform": "instagram",
      "thumbnail": "https://scontent.cdninstagram.com/v/t51.82787-15/833363157_18386606890228519_4672765839989317671_n.jpg",
      "timestamp": 1790967712,
      "title": 
"#Top5 | Descubre las noticias más destacadas de la semana 📰

Una semana de reconocimientos, investigación, innovación y nuevos logros que siguen marcando nuestra comunidad UNI.

💬 ¿Qué noticia sumarías a nuestro Top 5?

#NoticiasUNI #ComunidadUNI #UNI"
,
    },
    "urls": [
      {
        "filename": "instagram-DeAL9c0FNDL.mp4",
        "type": "video",
        "url": "https://instagram.flim28-2.fna.fbcdn.net/o1/v/t2/f2/m86/AQM39MC9ug7LJHb3kPbHPKk44hGZg2EkewiNy4xex6OXXAHh4sy_fh5ubEbmi9ziD7sL1ISNUtlPMXuL9KI30pp2ktM_5GSF9aJaNUo.mp4",
      },
    ],
  },
}
`;

exports[`instagram carousel 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "Referer": "https://www.instagram.com/",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36",
    },
    "meta": {
      "author": "uni_oficial",
      "comments": 4,
      "description": 
"#OrgulloUNI | 🏆 Primer puesto para estudiantes UNI en IDEATECH

Alexandra Peralta, de Ingeniería de Sistemas (FIIS), y Kevin Pinto, de Ingeniería de Telecomunicaciones (FIEE), lograron el primer puesto en la categoría Universidades de IDEATECH, iniciativa del Women in Technology Council desarrollada en el marco del Women in Technology Summit LATAM 2026.

Junto a su equipo, presentaron HEROW, una propuesta que busca ayudar a jóvenes, especialmente mujeres, a reconocer sus talentos, explorar caminos profesionales y conectar sus habilidades con oportunidades reales.

🥇 Este reconocimiento destaca el talento, la creatividad y la capacidad de nuestros estudiantes para llevar una propuesta desarrollada desde la UNI a un espacio internacional y competir junto a talento universitario de Latinoamérica.

🙌 ¡Felicitaciones, Alexandra y Kevin! Este logro también es motivo de orgullo para nuestra comunidad UNI.

#TalentoUNI #InnovaciónUNI #ComunidadUNI"
,
      "likes": 367,
      "platform": "instagram",
      "thumbnail": "https://scontent.cdninstagram.com/v/t39.30808-6/834392759_1445392894351881_5380248374502743913_n.jpg",
      "timestamp": 1790964017,
      "title": 
"#OrgulloUNI | 🏆 Primer puesto para estudiantes UNI en IDEATECH

Alexandra Peralta, de Ingeniería de Sistemas (FIIS), y Kevin Pinto, de Ingeniería de Telecomunicaciones (FIEE), lograron el primer puesto en la categoría Universidades de IDEATECH, iniciativa del Women in Technology Council desarrollada en el marco del Women in Technology Summit LATAM 2026.

Junto a su equipo, presentaron HEROW, una propuesta que busca ayudar a jóvenes, especialmente mujeres, a reconocer sus talentos, explorar caminos profesionales y conectar sus habilidades con oportunidades reales.

🥇 Este reconocimiento destaca el talento, la creatividad y la capacidad de nuestros estudiantes para llevar una propuesta desarrollada desde la UNI a un espacio internacional y competir junto a talento universitario de Latinoamérica.

🙌 ¡Felicitaciones, Alexandra y Kevin! Este logro también es motivo de orgullo para nuestra comunidad UNI.

#TalentoUNI #InnovaciónUNI #ComunidadUNI"
,
    },
    "urls": [
      {
        "filename": "instagram-DeAFAiLjZkk-1.jpg",
        "type": "image",
        "url": "https://instagram.flim28-2.fna.fbcdn.net/v/t39.30808-6/834392759_1445392894351881_5380248374502743913_n.jpg",
      },
      {
        "filename": "instagram-DeAFAiLjZkk-2.jpg",
        "type": "image",
        "url": "https://instagram.flim33-1.fna.fbcdn.net/v/t39.30808-6/825351630_1445392897685214_3718910234207002382_n.jpg",
      },
      {
        "filename": "instagram-DeAFAiLjZkk-3.jpg",
        "type": "image",
        "url": "https://instagram.flim28-2.fna.fbcdn.net/v/t39.30808-6/830575060_1445392901018547_4163533045875602641_n.jpg",
      },
    ],
  },
}
`;

exports[`instagram collab_carousel 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "Referer": "https://www.instagram.com/",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36",
    },
    "meta": {
      "author": "ceculturaluni",
      "comments": 0,
      "description": 
"🌿✨ ¡Así vivimos nuestro Paseo de Integración 2026! ✨🌿

Un día para salir de la rutina, compartir, conocernos y, sobre todo, fortalecer los lazos que nos unen como Elencos Culturales de la UNI. 💛❤️

El pasado domingo 27 de septiembre, nos reunimos para disfrutar de una jornada llena de alegría, juegos, dinámicas y mucha energía en el Club Campestre “Las Retamas”. 🏞️🎶

Más que un paseo, fue una oportunidad para compartir nuevas experiencias y seguir construyendo una comunidad donde el arte y la cultura nos unen. 🤝✨

Porque detrás de cada presentación hay personas, historias y una gran familia cultural. ❤️

📸 Les compartimos la primera parte de las fotografías de este día.

#CentroCulturalUNI #ElencosCulturalesUNI #PaseoDeIntegración2026 #CulturaUNI #SomosUNI MásArteMásCienciaMásCultura"
,
      "likes": 526,
      "platform": "instagram",
      "thumbnail": "https://scontent.cdninstagram.com/v/t51.82787-15/832777556_18379262587233172_1009159243376536849_n.jpg",
      "timestamp": 1791046802,
      "title": 
"🌿✨ ¡Así vivimos nuestro Paseo de Integración 2026! ✨🌿

Un día para salir de la rutina, compartir, conocernos y, sobre todo, fortalecer los lazos que nos unen como Elencos Culturales de la UNI. 💛❤️

El pasado domingo 27 de septiembre, nos reunimos para disfrutar de una jornada llena de alegría, juegos, dinámicas y mucha energía en el Club Campestre “Las Retamas”. 🏞️🎶

Más que un paseo, fue una oportunidad para compartir nuevas experiencias y seguir construyendo una comunidad donde el arte y la cultura nos unen. 🤝✨

Porque detrás de cada presentación hay personas, historias y una gran familia cultural. ❤️

📸 Les compartimos la primera parte de las fotografías de este día.

#CentroCulturalUNI #ElencosCulturalesUNI #PaseoDeIntegración2026 #CulturaUNI #SomosUNI MásArteMásCienciaMásCultura"
,
    },
    "urls": [
      {
        "filename": "instagram-DeCi8E3nBjB-1.jpg",
        "type": "image",
        "url": "https://instagram.flim28-2.fna.fbcdn.net/v/t51.82787-15/832777556_18379262587233172_1009159243376536849_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-2.jpg",
        "type": "image",
        "url": "https://instagram.flim33-1.fna.fbcdn.net/v/t51.82787-15/830632347_18379262650233172_3820818906668777679_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-3.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/833297911_18379262596233172_1327140621872502417_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-4.jpg",
        "type": "image",
        "url": "https://instagram.flim28-2.fna.fbcdn.net/v/t51.82787-15/834767445_18379262611233172_7302181881187917535_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-5.jpg",
        "type": "image",
        "url": "https://instagram.flim33-1.fna.fbcdn.net/v/t51.82787-15/832633570_18379262620233172_5690795666516968701_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-6.jpg",
        "type": "image",
        "url": "https://instagram.flim33-1.fna.fbcdn.net/v/t51.82787-15/836458661_18379262662233172_7191462041139996748_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-7.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/831400024_18379262653233172_688618286960859846_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-8.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/836259715_18379262647233172_1731049767781302068_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-9.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/834084370_18379262674233172_5998292205963994606_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-10.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/831505046_18379262695233172_4738242881554022675_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-11.jpg",
        "type": "image",
        "url": "https://instagram.flim28-1.fna.fbcdn.net/v/t51.82787-15/831354619_18379262791233172_4751716854639116086_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-12.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/831324443_18379262806233172_818941982498523357_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-13.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/833573833_18379262821233172_9180134015479352674_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-14.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/835215952_18379262860233172_9037565020342757350_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-15.jpg",
        "type": "image",
        "url": "https://instagram.flim33-1.fna.fbcdn.net/v/t51.82787-15/834677950_18379262914233172_8846382717226594813_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-16.jpg",
        "type": "image",
        "url": "https://instagram.flim28-1.fna.fbcdn.net/v/t51.82787-15/833653751_18379262869233172_6489293744014297702_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-17.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/834500440_18379262866233172_3371692179776501279_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-18.jpg",
        "type": "image",
        "url": "https://instagram.flim28-1.fna.fbcdn.net/v/t51.82787-15/832633575_18379262896233172_8267755109675323364_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-19.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/836501163_18379262893233172_3255808160402662774_n.jpg",
      },
      {
        "filename": "instagram-DeCi8E3nBjB-20.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/832777563_18379262899233172_7832092208778253249_n.jpg",
      },
    ],
  },
}
`;

exports[`instagram single_image 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "Referer": "https://www.instagram.com/",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36",
    },
    "meta": {
      "author": "gft.unmsm",
      "comments": 0,
      "description": 
"¡Continuamos con la segunda charla de los Peruvian Theoretical Physics Seminars 2026-2 (Peruvian TPS 2026)!

Título: Análisis de la interacción de CDM y energía oscura en modelos 𝜔CDM

Speaker: Nelson Mechán (GRACCOC, Universidad Nacional de Trujillo, Perú)

🗓️ Fecha: Miércoles 2 de Setiembre de 2026
🗓️ Horario: 16:00 pm (Hora de Lima, Perú)
📌 Ubicación (En línea): https://meet.google.com/nft-upct-ddv

🔗 Más información de los Peruvian TPS 2026: https://sites.google.com/view/peruviantps2026/home

Inscripciones al mailing list para asistir a los seminarios: https://forms.gle/TRYX74dVv9J9jtmPA

¡Comparte esta publicación y ayuda a difundir el conocimiento científico en nuestro país!"
,
      "likes": 15,
      "platform": "instagram",
      "thumbnail": "https://scontent.cdninstagram.com/v/t51.82787-15/785776041_17986239804102492_589192130445848825_n.webp",
      "timestamp": 1787694975,
      "title": 
"¡Continuamos con la segunda charla de los Peruvian Theoretical Physics Seminars 2026-2 (Peruvian TPS 2026)!

Título: Análisis de la interacción de CDM y energía oscura en modelos 𝜔CDM

Speaker: Nelson Mechán (GRACCOC, Universidad Nacional de Trujillo, Perú)

🗓️ Fecha: Miércoles 2 de Setiembre de 2026
🗓️ Horario: 16:00 pm (Hora de Lima, Perú)
📌 Ubicación (En línea): https://meet.google.com/nft-upct-ddv

🔗 Más información de los Peruvian TPS 2026: https://sites.google.com/view/peruviantps2026/home

Inscripciones al mailing list para asistir a los seminarios: https://forms.gle/TRYX74dVv9J9jtmPA

¡Comparte esta publicación y ayuda a difundir el conocimiento científico en nuestro país!"
,
    },
    "urls": [
      {
        "filename": "instagram-DcepzLhTqxC.jpg",
        "type": "image",
        "url": "https://instagram.flim28-2.fna.fbcdn.net/v/t51.82787-15/785776041_17986239804102492_589192130445848825_n.webp",
      },
    ],
  },
}
`;

exports[`instagram single_image_2 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "Referer": "https://www.instagram.com/",
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36",
    },
    "meta": {
      "author": "gft.unmsm",
      "comments": 3,
      "description": 
"Invitación para el Día Internacional de la Cuántica.

El GFT complace invitar a la comunidad, a este evento sobre computación cuántica.

Entrada libre. 

#fisica #quantum #unmsm"
,
      "likes": 56,
      "platform": "instagram",
      "thumbnail": "https://scontent.cdninstagram.com/v/t51.82787-15/671181528_17963043627102492_5784499939890738216_n.webp",
      "timestamp": 1776721186,
      "title": 
"Invitación para el Día Internacional de la Cuántica.

El GFT complace invitar a la comunidad, a este evento sobre computación cuántica.

Entrada libre. 

#fisica #quantum #unmsm"
,
    },
    "urls": [
      {
        "filename": "instagram-DXXm9hhEe7s.jpg",
        "type": "image",
        "url": "https://instagram.flim38-1.fna.fbcdn.net/v/t51.82787-15/671181528_17963043627102492_5784499939890738216_n.webp",
      },
    ],
  },
}
`;

exports[`twitter video 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "Dave Mullins (@_DaveMullins)",
      "comments": 26,
      "likes": 4598,
      "platform": "twitter",
      "reposts": 400,
      "timestamp": 1558018711,
      "title": "Final animation on my Helen phone shots on #TheIncredibles. The cord was animated by hand... #nosim",
    },
    "urls": [
      {
        "filename": "twitter-1129038424130899969-1.mp4",
        "type": "video",
        "url": "https://video.twimg.com/ext_tw_video/1129038339946844160/pu/vid/640x480/Sn5ziraTJI8A8U3t.mp4",
      },
    ],
  },
}
`;

exports[`twitter multi_image 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "kyle🇯🇲🇫🇷 (@toofarST)",
      "comments": 48,
      "likes": 1296,
      "platform": "twitter",
      "reposts": 83,
      "timestamp": 1763922866,
      "title": "this deserves way more flowers than it gets because that was so fucking awesome",
    },
    "urls": [
      {
        "filename": "twitter-1992663043185275367-1.jpg",
        "type": "image",
        "url": "https://pbs.twimg.com/media/G6dcecnXcAAfCYi.jpg",
      },
      {
        "filename": "twitter-1992663043185275367-2.jpg",
        "type": "image",
        "url": "https://pbs.twimg.com/media/G6dcecmWwAA4rmu.jpg",
      },
      {
        "filename": "twitter-1992663043185275367-3.jpg",
        "type": "image",
        "url": "https://pbs.twimg.com/media/G6dcecnW4AAWCv1.jpg",
      },
      {
        "filename": "twitter-1992663043185275367-4.jpg",
        "type": "image",
        "url": "https://pbs.twimg.com/media/G6dcecmWEAEJLik.jpg",
      },
    ],
  },
}
`;

exports[`imgur single_image 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "Unknown",
      "likes": 0,
      "platform": "imgur",
      "title": "Imgur Media",
      "views": 0,
    },
    "urls": [
      {
        "filename": "imgur-7q4TxW7.png",
        "type": "image",
        "url": "https://i.imgur.com/7q4TxW7.png",
      },
    ],
  },
}
`;

exports[`imgur gallery_single_image 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "Unknown",
      "likes": 0,
      "platform": "imgur",
      "title": "!",
      "views": 41314,
    },
    "urls": [
      {
        "filename": "imgur-7q4TxW7.png",
        "type": "image",
        "url": "https://i.imgur.com/7q4TxW7.png",
      },
    ],
  },
}
`;

exports[`imgur gallery_single_video 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "Unknown",
      "likes": 0,
      "platform": "imgur",
      "title": "The mouth movements…",
      "views": 47056,
    },
    "urls": [
      {
        "filename": "imgur-gQhZkkr.mp4",
        "type": "video",
        "url": "https://i.imgur.com/gQhZkkr.mp4",
      },
    ],
  },
}
`;

exports[`imgur gallery_multi_image 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "Unknown",
      "likes": 0,
      "platform": "imgur",
      "title": "The Art Gallery (ready to heist) - Free DnD / TTRPG maps",
      "views": 8292,
    },
    "urls": [
      {
        "filename": "imgur-8uaFtPB.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/8uaFtPB.jpeg",
      },
      {
        "filename": "imgur-OYCfrIG.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/OYCfrIG.jpeg",
      },
      {
        "filename": "imgur-36LpJKy.mp4",
        "type": "video",
        "url": "https://i.imgur.com/36LpJKy.mp4",
      },
      {
        "filename": "imgur-XYxqnOe.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/XYxqnOe.jpeg",
      },
      {
        "filename": "imgur-n9YrRQo.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/n9YrRQo.jpeg",
      },
      {
        "filename": "imgur-zkJezdc.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/zkJezdc.jpeg",
      },
      {
        "filename": "imgur-YuKNe04.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/YuKNe04.jpeg",
      },
      {
        "filename": "imgur-Y5MRgeq.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/Y5MRgeq.jpeg",
      },
      {
        "filename": "imgur-AbSdcNi.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/AbSdcNi.jpeg",
      },
      {
        "filename": "imgur-619pvcy.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/619pvcy.jpeg",
      },
      {
        "filename": "imgur-SVlQf7y.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/SVlQf7y.jpeg",
      },
      {
        "filename": "imgur-Ji4vSWl.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/Ji4vSWl.jpeg",
      },
      {
        "filename": "imgur-NCyC1se.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/NCyC1se.jpeg",
      },
      {
        "filename": "imgur-J4daS8B.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/J4daS8B.jpeg",
      },
      {
        "filename": "imgur-ispYqGr.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/ispYqGr.jpeg",
      },
      {
        "filename": "imgur-KajhHsY.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/KajhHsY.jpeg",
      },
      {
        "filename": "imgur-QnWjveY.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/QnWjveY.jpeg",
      },
      {
        "filename": "imgur-7LDDUoj.jpeg",
        "type": "image",
        "url": "https://i.imgur.com/7LDDUoj.jpeg",
      },
    ],
  },
}
`;

exports[`youtube video 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "jawed",
      "comments": 10000000,
      "description": 
"Microplastics are accumulating in human brains at an alarming rate
https://www.youtube.com/watch?v=0PT5c1z3LL8

“Nanoplastics and Human Health” with Matthew J Campen, PhD, MSPH
https://www.youtube.com/watch?v=RRBN_4L09Mg

00:00 Intro
00:05 The cool thing
00:17 End"
,
      "likes": 18972356,
      "platform": "youtube",
      "thumbnail": "https://i.ytimg.com/vi/jNQXAC9IVRw/hqdefault.jpg",
      "timestamp": 1114313512,
      "title": "Me at the zoo",
      "views": 394628170,
    },
    "urls": [
      {
        "filename": "youtube-jNQXAC9IVRw.mp4",
        "type": "video",
        "url": "https://rr1---sn-5auxa-unxe.googlevideo.com/videoplayback?itag=18&mime=video/mp4",
      },
    ],
  },
}
`;

exports[`youtube video_short 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "The Pragmatic Engineer",
      "comments": 0,
      "description": "From Martin Fowler, Chief Scientist at Thoughtworks. Full video: https://www.youtube.com/watch?v=CQmI4XKTa0U",
      "likes": 35,
      "platform": "youtube",
      "thumbnail": "https://i.ytimg.com/vi/9RrdDM_9Cqk/sddefault.jpg",
      "timestamp": 1764105004,
      "title": "How was the Thoughtworks Radar created",
      "views": 2357,
    },
    "urls": [
      {
        "filename": "youtube-9RrdDM_9Cqk.mp4",
        "type": "video",
        "url": "https://rr2---sn-5auxa-unxe.googlevideo.com/videoplayback?itag=18&mime=video/mp4",
      },
      {
        "filename": "youtube-9RrdDM_9Cqk-video.mp4",
        "type": "video",
        "url": "https://rr3---sn-cu-ba5e.googlevideo.com/videoplayback?itag=137&mime=video/mp4",
      },
      {
        "filename": "youtube-9RrdDM_9Cqk-audio.m4a",
        "type": "audio",
        "url": "https://rr3---sn-cu-ba5e.googlevideo.com/videoplayback?itag=140&mime=audio/mp4",
      },
    ],
  },
}
`;

exports[`tiktok video 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "Referer": "https://www.tiktok.com/",
    },
    "meta": {
      "author": "STAYC",
      "comments": 1667,
      "likes": 107700,
      "platform": "tiktok",
      "shares": 1189,
      "timestamp": 1661508396,
      "title": "💖STAY IN CHICAGO💖 #STAYC #스테이씨 #STAYC_tiktok ",
      "views": 497000,
    },
    "urls": [
      {
        "filename": "tiktok-7136124191849417985.mp4",
        "type": "video",
        "url": "https://v77.tiktokcdn.com/7bcff238927d2072100f3fa9c78b58a6/6a2e8e05/video/tos/alisg/tos-alisg-pve-0037/c8d7400695454cea8d66c6f1d17fd3b2/",
      },
    ],
  },
}
`;

exports[`tiktok carousel 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "Referer": "https://www.tiktok.com/",
    },
    "meta": {
      "author": "리아 ⊹",
      "comments": 1,
      "likes": 60,
      "platform": "tiktok",
      "shares": 0,
      "timestamp": 1730311295,
      "title": "cttro ⊹ || #fyp #fypage #fypシ゚ #foryou #viral #blowthisup #actives? #dontletthisflop #famous #unflopme #makemefamous #xyzbca #xuhuong #watchthisyall #fyppppppppppppppppppppppp #kpop #cttro #hair #haistyle #hairstyleideas #cutebun #yunjin #yunjinism ",
      "views": 459,
    },
    "urls": [
      {
        "filename": "tiktok-7431630383940193569-1.jpg",
        "type": "image",
        "url": "https://p16-common-sign.tiktokcdn.com/tos-maliva-i-photomode-us/add1b8f6d5e9446fbe46e9e8844ff217~tplv-photomode-image.jpeg",
      },
      {
        "filename": "tiktok-7431630383940193569-2.jpg",
        "type": "image",
        "url": "https://p19-common-sign.tiktokcdn.com/tos-maliva-i-photomode-us/add1b8f6d5e9446fbe46e9e8844ff217~tplv-photomode-image.jpeg",
      },
      {
        "filename": "tiktok-7431630383940193569-3.jpg",
        "type": "image",
        "url": "https://p16-common-sign.tiktokcdn.com/tos-maliva-i-photomode-us/956a9da1a06047698c4e5aaab6f789d5~tplv-photomode-image.jpeg",
      },
      {
        "filename": "tiktok-7431630383940193569-4.jpg",
        "type": "image",
        "url": "https://p19-common-sign.tiktokcdn.com/tos-maliva-i-photomode-us/956a9da1a06047698c4e5aaab6f789d5~tplv-photomode-image.jpeg",
      },
    ],
  },
}
`;

exports[`pinterest single_image 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "jay",
      "platform": "pinterest",
      "title": "Winter Walks",
    },
    "urls": [
      {
        "filename": "pinterest-805651820858880488.jpg",
        "type": "image",
        "url": "https://i.pinimg.com/originals/12/8c/9b/128c9b2e3f543c1a836daccc28a5b267.jpg",
      },
    ],
  },
}
`;

exports[`pinterest video 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {},
    "meta": {
      "author": "jay",
      "platform": "pinterest",
      "title": "100 painted eyes challenge #artchallenge",
    },
    "urls": [
      {
        "filename": "pinterest-805651820863629473.mp4",
        "type": "video",
        "url": "https://v1.pinimg.com/videos/mc/720p/19/1c/59/191c591c08fc8038c096130939bec04c.mp4",
      },
    ],
  },
}
`;

exports[`facebook video 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36",
    },
    "meta": {
      "author": "Universidad Nacional Mayor de San Marcos",
      "platform": "facebook",
      "title": "Facebook Video",
    },
    "urls": [
      {
        "filename": "fb-2126724314377208.mp4",
        "type": "video",
        "url": "https://video.fclj1-2.fna.fbcdn.net/o1/v/t2/f2/m366/AQMxfAlUZkvA3n-WPn5uvDPNXjqE6iMN38qK4ZZ80QxS1erQARyZB6_sJSbQpzqmxMfbPT_m36QZBtHdyy7UL4KBIpOip3pDoxsqAhMfrA6V8Q.mp4",
      },
      {
        "filename": "fb-2126724314377208.m4a",
        "type": "audio",
        "url": "https://video.fclj1-2.fna.fbcdn.net/o1/v/t2/f2/m412/AQN8l9A7MDt6KDITC-1XC2X6Xx2Eakd1TM99A1ia2VmOmvLq63EjtXqGZLED8e5N97g3Y9LcTpauIiFnUVsD470.mp4",
      },
    ],
  },
}
`;

exports[`facebook video_short_url 1`] = `
{
  "error": undefined,
  "ok": true,
  "result": {
    "headers": {
      "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36",
    },
    "meta": {
      "author": "Universidad Nacional Mayor de San Marcos",
      "platform": "facebook",
      "title": "Facebook Video",
    },
    "urls": [
      {
        "filename": "fb-2126724314377208.mp4",
        "type": "video",
        "url": "https://video-sjc3-1.xx.fbcdn.net/o1/v/t2/f2/m366/AQMxfAlUZkvA3n-WPn5uvDPNXjqE6iMN38qK4ZZ80QxS1erQARyZB6_sJSbQpzqmxMfbPT_m36QZBtHdyy7UL4KBIpOip3pDoxsqAhMfrA6V8Q.mp4",
      },
      {
        "filename": "fb-2126724314377208.m4a",
        "type": "audio",
        "url": "https://video-sjc3-1.xx.fbcdn.net/o1/v/t2/f2/m412/AQN8l9A7MDt6KDITC-1XC2X6Xx2Eakd1TM99A1ia2VmOmvLq63EjtXqGZLED8e5N97g3Y9LcTpauIiFnUVsD470.mp4",
      },
    ],
  },
}
`;
